modify path and readme

--- a/install
+++ b/install
@@ -2,11 +2,42 @@
 osId=$(lsb_release -i)
 osId=$(echo $osId | cut -d: -f2)
 
+defaultName=gridwiz
+defaultVersion=1.0.0
+defaultRelease=1
+
+echo "### Rpm Package Config"
+echo -n "Package specFile Name(default : $defaultName) : "
+read packageName
+
+if [ -z $packageName ]
+then
+packageName=$defaultName
+fi
+
+
+echo -n "Package specFile Version(default : $defaultVersion) : "
+read packageVersion
+
+if [ -z $packageVersion ]
+then
+packageVersion=$defaultVersion
+fi
+
+echo -n "Pacakge specFile Release(default : $defaultRelease) : "
+read packageRelease
+
+if [ -z $packageRelease ]
+then
+packageRelese=$defaultRelease
+fi
+
+
 if [ $osId = CentOS ]
 then
-path=$(rpm -qa gridwiz)
+path=$(rpm -qa $packageName)
 else
-path=$(dpkg --get-selections | grep gridwiz)
+path=$(dpkg --get-selections | grep $packageName)
 path=${path%" "}
 
 fi
@@ -24,7 +55,7 @@ else
     then
       rpm -e $path
     else
-      dpkg -r gridwiz;
+      dpkg -r $packageName;
     fi
     echo "Package was removed";
     break;;
@@ -34,35 +65,6 @@ else
 done
 fi
 
-defaultName=gridwiz
-defaultVersion=1.0.0
-defaultRelease=1
-
-echo "### Rpm Package Config"
-echo -n "Package specFile Name(default : $defaultName) : "
-read packageName
-
-if [ -z $packageName ]
-then
-packageName=$defaultName
-fi
-
-
-echo -n "Package specFIle Version(default : $defaultVersion) : "
-read packageVersion
-
-if [ -z $packageVersion ]
-then
-packageVersion=$defaultVersion
-fi
-
-echo -n "Pacakge specFIle Release(default : $defaultRelease) : "
-read packageRelease
-
-if [ -z $packageRelease ]
-then
-packageRelese=$defaultRelease
-fi
 
 fullName=$packageName'-'$packageVersion
 echo $fullName
